--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -27,8 +27,10 @@ jobs:
         fetch-depth: 1
     - name: Install theme(s)
       run: |
-        curl -sS https://getcomposer.org/installer | php
-        php composer.phar install --prefer-dist --no-dev --no-progress --no-interaction
+        if [[ -f "composer.json" ]]; then
+          curl -sS https://getcomposer.org/installer | php
+          php composer.phar install --prefer-dist --no-dev --no-progress --no-interaction
+        fi
     - name: Build site with Cecil
       run: |
         if [[ -z "$CECIL_VERSION" ]]; then
