--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -61,6 +61,7 @@ jobs:
       with:
         name: _site
         path: _site
+        if-no-files-found: error
 
   deploy:
     name: Deploy
@@ -72,6 +73,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: _site
+        path: _site
 
     - name: Deploy site to GitHub Pages
       uses: Cecilapp/GitHub-Pages-deploy@3.0.0
