--- a/cecil.yml
+++ b/cecil.yml
@@ -1,6 +1,6 @@
-title: "Single GitHub Page"
-description: "Single GitHub Page demo"
-baseurl: "/"
+title: Single GitHub Page
+description: Single GitHub Page demo
+baseurl: /
 pages:
   dir: .
 static:
